# uhttp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: codeql-analysis.yml
inc/: uhttp.h
src/: client.c  client.h  debug.h  list.c  list.h  server.c  winsock.c
src/cli/: main.c
test/: CMakeLists.txt  list.c  test_common.c  test_common.h
